# uvbekutils

./: .gitignore  pyproject.toml
uvbekutils/: __init__.py  bek_funcs.py  list_pick.py  main.py  property_concentration.py  pyautobek.py  select_file.py  select_from_list.py  standardize_columns.py  sumby_w_totals.py  sumby_w_totals.xlsx
