
[build-system]
# Use the official uv build backend to create wheels and source distributions
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["."]
include = ["uvbekutils*"]

[tool.uv.build-backend]
# Tells uv to look in the root directory (.) for the "uvbekutils" folder
module-root = "."

#[tool.uv.sources]
#bekutils = { git = "https://github.com/kramsman/bekutils.git" }


[project]
name = "uvbekutils"
version = "0.2.0"
description = "utility tools using uv to manage the environment now with uv and no tkinter"
requires-python = ">=3.12"
dependencies = [
    #    "bekutils",
    "pyautogui",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    #    "pymsgbox>=2.0.1",
    "pyside6>=6.10.1",
    #    "pysimplegui>=5.0.8.3",
]
